# digitalme

./: .dockerignore  .env.example  .gitignore  .gitmodules  ARCHITECTURE_FRAGMENTATION_ANALYSIS.md  CHAINGUARD_INTEGRATION_SUMMARY.md  CLAUDE.md  DOCKER_BUILD_FIX.md  DOCKER_DEPLOYMENT.md  DOCKER_FIXES_SUMMARY.md  DOCKER_QUICKSTART.md  Dockerfile  INTEGRATION_GUIDE.md  LOBSTER_PATTERN_REFACTOR.md  MIGRATION_COMPLETED.md  MIGRATION_SUMMARY.md  README.md  agentic-system-spec.md  cleanup.sh  docker-compose.yml  indra-integration.md  main.py  pyproject.toml  requirements-prod.txt  requirements.txt
docs/: lobster-architecture-comparison.md  mesh-enrichment-integration.md
healthos_bot/: AZURE-MIGRATION-SUMMARY.md  CLAUDE.md  Dockerfile  QUICK-START.md  README.md  SIMPLE-AZURE-DEPLOY.md  deploy-azure.sh  deploy-simple.sh  docker-compose.yml  main.py  pyproject.toml  requirements.txt
healthos_bot/azure/: README-AZURE-DEPLOYMENT.md  cleanup-azure.sh  config-template.env
healthos_bot/bot/: bot.py  config.py
healthos_bot/config/: chat_modes.yml  models.yml
healthos_bot/indra_agent/: llm_factory.py  main.py
indra_agent/: __init__.py
indra_agent/agents/: graph.py  indra_query_agent.py  mesh_enrichment_agent.py  state.py  supervisor.py  web_researcher.py
indra_agent/config/: agent_config.py  agent_registry.py  settings.py
indra_agent/core/: client.py  models.py  state_manager.py
indra_agent/langgraph_supervisor/: supervisor.py
tests/: RUN_INTEGRATION_TESTS.md  __init__.py  conftest.py  test_basic.py  test_e2e_causal_discovery.py  test_gateway_contract.py  test_graph_execution.py  test_indra_integration.py  test_live_e2e_with_writer_kg.py  test_live_writer_kg_integration.py  test_mesh_enrichment.py
(+51 files in other folders)
