[project]
name = "digitalme"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncio>=4.0.0",
    "fastapi>=0.119.0",
    "httpx>=0.28.1",
    "langchain>=0.3.27",
    "langchain-anthropic>=0.3.22",
    "langchain-aws>=0.2.35",
    "langgraph>=0.6.10",
    "pydantic>=2.12.2",
    "pytest>=8.4.2",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.37.0",
]
